# Agent-Browser

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  spa_compatibility.md
.github/workflows/: ci.yml
examples/: basic-navigation.ts  data-extraction.ts  export-cookies.html  form-interaction.ts  js-execution.ts  mcp-config.json  multi-session.ts
examples/python-agent/: example.py
sdks/python/: pyproject.toml
sdks/python/src/ai_browser/: __init__.py  client.py  session.py  types.py
