[project]
name = "ai-browser"
version = "0.1.0"
description = "Python SDK for AI Browser — interact with the web through AI-friendly APIs"
readme = {text = "Python SDK for AI Browser", content-type = "text/plain"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_browser"]
